--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -1,51 +1,98 @@
 
-
 about :
 
-  name : "wFiles"
-  description : "Collection of classes to abstract files systems. Many interfaces provide files, but not called as file systems and treated differently. For example server-side gives access to local files and browser-side HTTP/HTTPS protocol gives access to files as well, but in the very different way, it does the first. This problem forces a developer to break fundamental programming principle DRY and make code written to solve a problem not applicable to the same problem, on another platform/technology. Files treats any file-system-like interface as files system. Files combines all files available to the application into the single namespace where each file has unique Path/URI, so that operating with several files on different files systems is not what user of the module should worry about. If Files does not have an adapter for your files system you may design it providing a short list of stupid methods fulfilling completely or partly good defined API and get access to all sophisticated general algorithms on files for free. Who said files is only externals? Files makes possible to treat internals of a program as files system(s). Use the module to keep DRY."
-  version : "0.6.580"
+  name : 'wFiles'
+  description : 'Collection of classes to abstract files systems. Many interfaces provide files, but not called as file systems and treated differently. For example server-side gives access to local files and browser-side HTTP/HTTPS protocol gives access to files as well, but in the very different way, it does the first. This problem forces a developer to break fundamental programming principle DRY and make code written to solve a problem not applicable to the same problem, on another platform/technology. Files treats any file-system-like interface as files system. Files combines all files available to the application into the single namespace where each file has unique Path/URI, so that operating with several files on different files systems is not what user of the module should worry about. If Files does not have an adapter for your files system you may design it providing a short list of stupid methods fulfilling completely or partly good defined API and get access to all sophisticated general algorithms on files for free. Who said files is only externals? Files makes possible to treat internals of a program as files system(s). Use the module to keep DRY.'
+  version : '0.7.0'
   enabled : 1
   interpreters :
-  - nodejs >= 8.0.0
+  - njs >= 8.0.0
   - chrome >= 60.0.0
   - firefox >= 60.0.0
   keywords :
   - wTools
-
-execution :
-
-  scripts :
-    test : wtest .run proto/**
-    docgen : wdocgen staging
+  - wFiles
+  - file
+  - read file
+  - write file
+  license : MIT
+  author : 'Kostiantyn Wandalen <wanalen@willbe.so>'
+  contributors :
+  - 'Kostiantyn Wandalen <wanalen@willbe.so>'
+  - 'Volodymyr M. <volodymyr.migdal@gmail.com>'
+  - 'Ihor O. <iostashvxi@gmail.com>'
+  - 'Dmytro Kryvoruchko <dm.vict.kr@gmail.com>'
+  npm.name : 'wFiles'
+  npm.scripts :
+    test : 'wtest .run proto/**'
+    test2 : 'wtest .run proto/**/dwtools/amid/file.test/Provider.HardDrive.test.ss routine : linkHardSyncRunner'
+    test3 : 'wtest .run proto/**/dwtools/amid/file.test/Provider.HardDrive.test.ss routine : linkHardAsyncRunner'
+    docgen : 'wdocgen .build proto'
 
 path :
 
   repository : git+https:///github.com/Wandalen/wFiles.git
-  bugs : https:///github.com/Wandalen/wFiles/issues
+  bugtracker : https:///github.com/Wandalen/wFiles/issues
 
 step :
 
-  export.proto :
+  proto.export :
     inherit : module.export
     export : path::proto
     tar : 0
     criterion :
-      debug : 1
-      proto : 1
+      content : 'proto'
+
+  doc.export :
+    inherit : module.export
+    export : path::doc
+    tar : 0
+    criterion :
+      content : 'doc'
+
+  npm.export :
+    inherit : module.export
+    export : out.npm
+    tar : 0
+    criterion :
+      content : 'npm'
+
+  npm.publish :
+    shell : npm publish
 
 build :
 
   proto.export :
     criterion :
-      default : 1
-      debug : 1
-      raw : 1
-      proto : 1
+      content : 'proto'
       export : 1
-      tar : 1
-      public : 1
     steps :
-      - build::debug.raw
-      - step::export.proto
+      # - build::debug.raw
+      - step::proto.export
 
+  doc.export :
+    criterion :
+      content : 'doc'
+      export : 1
+    steps :
+      # - build::debug.raw
+      - step::doc.export
+
+  npm.export :
+    criterion :
+      content : 'npm'
+      export : 1
+    steps :
+      # - build::debug.raw
+      # - step::npm.export
+      - step::npm.publish
+
+  export :
+
+    criterion :
+      default : 1
+      export : 1
+    steps :
+      # - build::npm
+      - build::proto.export
+      # - build::doc.export
