Add comment # submodule

--- a/.im.will.yml
+++ b/.im.will.yml
@@ -3,79 +3,79 @@ submodule :
 
   wTools :
     path : npm:///wTools
-    enabled : 0
-  wstringer :
+    enabled : 0 # submodule
+  wStringer :
     path : npm:///wstringer
-    enabled : 0
-  wstringsextra :
+    enabled : 0 # submodule
+  wStringsExtra :
     path : npm:///wstringsextra
-    enabled : 0
+    enabled : 0 # submodule
   wConsequence :
     path : npm:///wConsequence
-    enabled : 0
+    enabled : 0 # submodule
   wCopyable :
     path : npm:///wCopyable
-    enabled : 0
-  wgdfstrategy :
+    enabled : 0 # submodule
+  wGdfStrategy :
     path : npm:///wgdfstrategy
-    enabled : 0
-  wroutinebasic :
+    enabled : 0 # submodule
+  wRoutineBasic :
     path : npm:///wroutinebasic
-    enabled : 0
-  wpathbasic :
+    enabled : 0 # submodule
+  wPathBasic :
     path : npm:///wpathbasic
-    enabled : 0
-  wpathtools :
+    enabled : 0 # submodule
+  wPathTools :
     path : npm:///wpathtools
-    enabled : 0
-  wuribasic :
+    enabled : 0 # submodule
+  wUriBasic :
     path : npm:///wuribasic
-    enabled : 0
-  wweburibasic :
+    enabled : 0 # submodule
+  wWebUriBasic :
     path : npm:///wweburibasic
-    enabled : 0
-  wappbasic :
+    enabled : 0 # submodule
+  wAppBasic :
     path : npm:///wappbasic
-    enabled : 0
-  wfieldsstack :
+    enabled : 0 # submodule
+  wFieldsStack :
     path : npm:///wfieldsstack
-    enabled : 0
+    enabled : 0 # submodule
   wRegexpObject :
     path : npm:///wRegexpObject
-    enabled : 0
-  wselector :
+    enabled : 0 # submodule
+  wSelector :
     path : npm:///wselector
-    enabled : 0
-  wverbal :
+    enabled : 0 # submodule
+  wVerbal :
     path : npm:///wverbal
-    enabled : 0
+    enabled : 0 # submodule
   wLogger :
     path : npm:///wLogger
-    enabled : 0
+    enabled : 0 # submodule
   ini :
     path : npm:///ini
-    enabled : 0
+    enabled : 0 # submodule
   tar :
     path : npm:///tar
-    enabled : 0
+    enabled : 0 # submodule
   wFiles :
     path : hd://.
-    enabled : 0
+    enabled : 0 # submodule
     criterion :
       development : 1
   wait-sync :
     path : npm:///wait-sync
-    enabled : 0
+    enabled : 0 # submodule
     criterion :
       development : 1
   cli-table2 :
     path : npm:///cli-table2#^0.2.0
-    enabled : 0
+    enabled : 0 # submodule
     criterion :
       development : 1
   wTesting :
     path : npm:///wTesting
-    enabled : 0
+    enabled : 0 # submodule
     criterion :
       development : 1
 
