package.json: add missing dep

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "wverbal": "",
     "wLogger": "",
     "ini": "",
-    "tar": ""
+    "tar": "",
+    "gitconfiglocal" : ""
   },
   "devDependencies": {
     "wait-sync": "",
