--- a/.im.will.yml
+++ b/.im.will.yml
@@ -3,79 +3,23 @@ submodule :
 
   wTools :
     path : npm:///wTools
-    enabled : 0
-  wstringer :
-    path : npm:///wstringer
-    enabled : 0
-  wstringsextra :
-    path : npm:///wstringsextra
-    enabled : 0
-  wConsequence :
-    path : npm:///wConsequence
-    enabled : 0
-  wCopyable :
-    path : npm:///wCopyable
-    enabled : 0
-  wgdfstrategy :
-    path : npm:///wgdfstrategy
-    enabled : 0
-  wroutinebasic :
-    path : npm:///wroutinebasic
-    enabled : 0
-  wpathbasic :
+    enabled : 0 # submodule
+  wPathBasic :
     path : npm:///wpathbasic
-    enabled : 0
-  wpathtools :
-    path : npm:///wpathtools
-    enabled : 0
-  wuribasic :
-    path : npm:///wuribasic
-    enabled : 0
-  wweburibasic :
-    path : npm:///wweburibasic
-    enabled : 0
-  wappbasic :
-    path : npm:///wappbasic
-    enabled : 0
-  wfieldsstack :
-    path : npm:///wfieldsstack
-    enabled : 0
-  wRegexpObject :
-    path : npm:///wRegexpObject
-    enabled : 0
-  wselector :
-    path : npm:///wselector
-    enabled : 0
-  wverbal :
-    path : npm:///wverbal
-    enabled : 0
-  wLogger :
-    path : npm:///wLogger
-    enabled : 0
-  ini :
-    path : npm:///ini
-    enabled : 0
-  tar :
-    path : npm:///tar
-    enabled : 0
-  wFiles :
+    enabled : 0 # submodule
+  wPathTools :
     path : hd://.
-    enabled : 0
+    enabled : 0 # submodule
     criterion :
       development : 1
-  wait-sync :
-    path : npm:///wait-sync
-    enabled : 0
-    criterion :
-      development : 1
-  cli-table2 :
-    path : npm:///cli-table2#^0.2.0
-    enabled : 0
+  wFiles :
+    path : npm:///wFiles
+    enabled : 0 # submodule
     criterion :
       development : 1
   wTesting :
     path : npm:///wTesting
-    enabled : 0
+    enabled : 0 # submodule
     criterion :
       development : 1
 
@@ -113,7 +57,7 @@ path :
       content : prime
 
   entry.proto.no.tests :
-    path : proto/dwtools/amid/files/UseTop.s
+    path : proto/dwtools/abase/l5/PathTools.s
     criterion :
       tests : 'no.tests'
   entry.proto.only.tests :
@@ -125,7 +69,7 @@ path :
   # npm.files : proto
 
   entry.out.raw.debug :
-    path : '{path::out.*=1}/source/dwtools/amid/files/UseTop.s'
+    path : '{path::out.*=1}/source/dwtools/abase/l5/PathTools.s'
     criterion :
       debug : [ debug, release ]
       raw : raw
