file lock: implement fileLockAct, fileUnlockAct, fileIsLockedAct for HD, wip

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "wLogger": "",
     "ini": "",
     "tar": "",
-    "gitconfiglocal" : ""
+    "gitconfiglocal" : "",
+    "fs-ext" : ""
   },
   "devDependencies": {
     "wait-sync": "",
