lock file: replace module fs-ext with proper-lockfile

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "ini": "",
     "tar": "",
     "gitconfiglocal" : "",
-    "fs-ext" : ""
+    "proper-lockfile" : ""
   },
   "devDependencies": {
     "wait-sync": "",
