--- a/package.json
+++ b/package.json
@@ -57,9 +57,8 @@
     "wselector": "",
     "wverbal": "",
     "wLogger": "",
-    "ini": "",
+    "wgittools": "",
     "tar": "",
-    "gitconfiglocal" : "",
     "proper-lockfile" : ""
   },
   "devDependencies": {
