implement simple configEdit,configFileEdit

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "wLogger": "",
     "wgittools": "",
     "tar": "",
-    "proper-lockfile" : ""
+    "proper-lockfile" : "",
+    "yaml" : ""
   },
   "devDependencies": {
     "wait-sync": "",
