--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -32,7 +32,7 @@ about :
 path :
 
   repository : git+https:///github.com/Wandalen/wFiles.git
-  remotes :
+  origins :
    - git+https:///github.com/Wandalen/wFiles.git
    - npm:///wFiles
   bugtracker : https:///github.com/Wandalen/wFiles/issues
