--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
   }, 
   "dependencies" : 
   {
-    "wTools" : "", 
-    "wstringer" : "", 
-    "wstringsextra" : "", 
-    "wConsequence" : "", 
-    "wCopyable" : "", 
-    "wgdfstrategy" : "", 
-    "wroutinebasic" : "", 
-    "wpathbasic" : "", 
-    "wpathtools" : "", 
-    "wuribasic" : "", 
-    "wweburibasic" : "", 
-    "wappbasic" : "", 
-    "wfieldsstack" : "", 
-    "wRegexpObject" : "", 
-    "wselector" : "", 
-    "wverbal" : "", 
-    "wLogger" : "", 
-    "wgittools" : "", 
+    "wTools" : "beta", 
+    "wstringer" : "beta", 
+    "wstringsextra" : "beta", 
+    "wConsequence" : "beta", 
+    "wCopyable" : "beta", 
+    "wgdfstrategy" : "beta", 
+    "wroutinebasic" : "beta", 
+    "wpathbasic" : "beta", 
+    "wpathtools" : "beta", 
+    "wuribasic" : "beta", 
+    "wweburibasic" : "beta", 
+    "wappbasic" : "beta", 
+    "wfieldsstack" : "beta", 
+    "wRegexpObject" : "beta", 
+    "wselector" : "beta", 
+    "wverbal" : "beta", 
+    "wLogger" : "beta", 
+    "wgittools" : "beta", 
     "tar" : "", 
     "proper-lockfile" : ""
   }, 
-  "devDependencies" : { "wait-sync" : "", "cli-table2" : "^0.2.0", "wTesting" : "" }, 
+  "devDependencies" : { "wait-sync" : "beta", "cli-table2" : "^0.2.0", "wTesting" : "beta" }, 
   "keywords" : [ "wTools", "wFiles", "file", "read file", "write file" ]
 }
