--- a/.im.will.yml
+++ b/.im.will.yml
@@ -88,7 +88,7 @@ path :
   out : 'out'
   temp : 'path::out'
   proto : './proto'
-  export : '{path::export}/**'
+  export : '{path::proto}/**'
   doc : './doc'
 
   out.raw.debug :
