--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,10 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - name: clone
+      run: |
+        git clone https://github.com/volodymyrmigdal/wFiles.git
+        cd wFiles
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
