--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -24,5 +24,4 @@ jobs :
       with :
         node-version : ${{ matrix.node-version }}
     - run : npm i
-    # - run : npm test
-    - run : node proto/dwtools/amid/files.test/FilesFind.Extract.test.s v:3 n:10
+    - run : npm test
