--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,8 +9,36 @@ on :
     branches : [ master ]
 
 jobs :
-  build :
+
+  Cancel:
+    name : 'Cancel Previous Runs'
+    runs-on : ubuntu-latest
+    timeout-minutes : 1
+    steps :
+      - uses : styfle/cancel-workflow-action@0.4.0
+        with :
+          access_token : ${{ github.token }}
+          # workflow_id : ${{ github.workflow }}
+
+  Fast :
     if : "!startsWith( github.event.head_commit.message, 'version' )"
+    runs-on : ${{ matrix.os }}
+    strategy :
+      fail-fast  : false
+      matrix :
+        os : [ windows-latest, ubuntu-latest, macos-latest ]
+        node-version : [ 14.x ]
+    steps :
+    - uses : actions/checkout@v2
+    - name : ${{ matrix.node-version }}
+      uses : actions/setup-node@v1
+      with :
+        node-version : ${{ matrix.node-version }}
+    - run : npm i
+    - run : npm test
+
+  Full :
+    if : "startsWith( github.event.head_commit.message, 'version' )"
     runs-on : ${{ matrix.os }}
     strategy :
       fail-fast  : false
