--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "wpathtools" : "alpha",
     "wuribasic" : "alpha",
     "wweburibasic" : "alpha",
-    "wappbasic" : "alpha",
+    "wprocess" : "alpha",
     "wfieldsstack" : "alpha",
     "wRegexpObject" : "alpha",
     "wselector" : "alpha",
