--- a/.im.will.yml
+++ b/.im.will.yml
@@ -64,6 +64,9 @@ submodule :
   proper-lockfile :
     path : npm:///proper-lockfile
     enabled : 0 # submodule
+  needle :
+    path : npm:///needle
+    enabled : 0 # submodule
   wFiles :
     path : hd://.
     enabled : 0 # submodule
