--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -38,9 +38,9 @@ jobs :
       with :
         node-version : ${{ matrix.node-version }}
     - run : npm i
-    - run : node proto/dwtools/amid/l4_files.test/HardDrive.test.ss.test.s r:fileDeleteFileWithSpecialSymbols v:10
-    - run : node proto/dwtools/amid/l4_files.test/HardDrive.test.ss.test.s r:hardLinkMultipleSync v:10
-    - run : node proto/dwtools/amid/l4_files.test/HardDrive.test.ss.test.s r:pathNativize v:10
+    - run : node proto/dwtools/amid/l4_files.test/HardDrive.test.ss r:fileDeleteFileWithSpecialSymbols v:10
+    - run : node proto/dwtools/amid/l4_files.test/HardDrive.test.ss r:hardLinkMultipleSync v:10
+    - run : node proto/dwtools/amid/l4_files.test/HardDrive.test.ss r:pathNativize v:10
     - run : node proto/dwtools/amid/l4_files.test/System.HardDrive.test.ss r:softLinkActSync v:10
 
   Full :
