--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,12 @@ jobs :
       name : node/default
     steps :
       - checkout
-      - node/with-cache:
-          steps :
-            - run : git config --global user.email "testing@testing.com"
-            - run : git config --global user.name "Testing"
-            - run : node -v
-            - run : npm install
-            - run : npm test
+      - run : git config --global user.email "testing@testing.com"
+      - run : git config --global user.name "Testing"
+      - run : node -v
+      - node/install-packages:
+        with-cache: false
+      - run : npm test
 workflows :
     test :
       jobs :
