--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs :
       - run : node -v
       - node/install-packages:
           with-cache: false
+          override-ci-command : npm install
       - run : npm test
 workflows :
     test :
