--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -21,6 +21,7 @@ about :
   - 'Volodymyr M. <volodymyr.migdal@gmail.com>'
   - 'Ihor O. <iostashvxi@gmail.com>'
   - 'Dmytro Kryvoruchko <dm.vict.kr@gmail.com>'
+  - 'Artem Bohush <art.bohush@gmail.com>'
   npm.name : 'wFiles'
   npm.scripts :
     test : 'wtest .run proto/**'
