--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "wConsequence" : "alpha",
     "wCopyable" : "alpha",
     "wgdf" : "alpha",
-    "wroutinebasic" : "alpha",
+    "wintrospectorbasic" : "alpha",
     "wpathbasic" : "alpha",
     "wpathtools" : "alpha",
     "wuribasic" : "alpha",
