--- a/.im.will.yml
+++ b/.im.will.yml
@@ -72,6 +72,11 @@ submodule :
     enabled : 0 # submodule
     criterion :
       development : 1
+  eslint :
+    path : npm:///eslint#7.1.0
+    enabled : 0 # submodule
+    criterion :
+      debug : 1
   wait-sync :
     path : npm:///wait-sync#1.0.1
     enabled : 0 # submodule
