--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,310 +1,307 @@
-
-submodule :
-
-  wTools :
-    path : npm:///wTools
-    enabled : 0 # submodule
-  wStringer :
-    path : npm:///wstringer
-    enabled : 0 # submodule
-  wStringsExtra :
-    path : npm:///wstringsextra
-    enabled : 0 # submodule
-  wConsequence :
-    path : npm:///wConsequence
-    enabled : 0 # submodule
-  wCopyable :
-    path : npm:///wCopyable
-    enabled : 0 # submodule
-  wGdfStrategy :
-    path : npm:///wgdf
-    enabled : 0 # submodule
-  wIntrospectorBasic :
-    path : npm:///wintrospectorbasic
-    enabled : 0 # submodule
-  wPathBasic :
-    path : npm:///wpathbasic
-    enabled : 0 # submodule
-  wPathTools :
-    path : npm:///wpathtools
-    enabled : 0 # submodule
-  wUriBasic :
-    path : npm:///wuribasic
-    enabled : 0 # submodule
-  wWebUriBasic :
-    path : npm:///wweburibasic
-    enabled : 0 # submodule
-  wProcess :
-    path : npm:///wprocess
-    enabled : 0 # submodule
-  wFieldsStack :
-    path : npm:///wfieldsstack
-    enabled : 0 # submodule
-  wRegexpObject :
-    path : npm:///wRegexpObject
-    enabled : 0 # submodule
-  wSelector :
-    path : npm:///wselector
-    enabled : 0 # submodule
-  wVerbal :
-    path : npm:///wverbal
-    enabled : 0 # submodule
-  wLogger :
-    path : npm:///wLogger
-    enabled : 0 # submodule
-  wGitTools :
-    path : npm:///wgittools
-    enabled : 0 # submodule
-  wNpmTools :
-    path : npm:///wnpmtools
-    enabled : 0 # submodule
-  tar :
-    path : npm:///tar#6.0.2
-    enabled : 0 # submodule
-  proper-lockfile :
-    path : npm:///proper-lockfile#4.1.1
-    enabled : 0 # submodule
-  needle :
-    path : npm:///needle#2.5.0
-    enabled : 0 # submodule
-  wFiles :
-    path : hd://.
-    enabled : 0 # submodule
-    criterion :
-      development : 1
-  eslint :
-    path : npm:///eslint#7.1.0
-    enabled : 0 # submodule
-    criterion :
-      debug : 1
-  wait-sync :
-    path : npm:///wait-sync#1.0.1
-    enabled : 0 # submodule
-    criterion :
-      development : 1
-  wTesting :
-    path : npm:///wTesting
-    enabled : 0 # submodule
-    criterion :
-      development : 1
-
-path :
-
-  in : '.'
-  out : 'out'
-  temp :
+submodule:
+  wTools:
+    path: 'npm:///wTools'
+    enabled: 0
+  wStringer:
+    path: 'npm:///wstringer'
+    enabled: 0
+  wStringsExtra:
+    path: 'npm:///wstringsextra'
+    enabled: 0
+  wConsequence:
+    path: 'npm:///wConsequence'
+    enabled: 0
+  wCopyable:
+    path: 'npm:///wCopyable'
+    enabled: 0
+  wGdfStrategy:
+    path: 'npm:///wgdf'
+    enabled: 0
+  wIntrospectorBasic:
+    path: 'npm:///wintrospectorbasic'
+    enabled: 0
+  wPathBasic:
+    path: 'npm:///wpathbasic'
+    enabled: 0
+  wPathTools:
+    path: 'npm:///wpathtools'
+    enabled: 0
+  wUriBasic:
+    path: 'npm:///wuribasic'
+    enabled: 0
+  wWebUriBasic:
+    path: 'npm:///wweburibasic'
+    enabled: 0
+  wProcess:
+    path: 'npm:///wprocess'
+    enabled: 0
+  wFieldsStack:
+    path: 'npm:///wfieldsstack'
+    enabled: 0
+  wRegexpObject:
+    path: 'npm:///wRegexpObject'
+    enabled: 0
+  wSelector:
+    path: 'npm:///wselector'
+    enabled: 0
+  wVerbal:
+    path: 'npm:///wverbal'
+    enabled: 0
+  wLogger:
+    path: 'npm:///wLogger'
+    enabled: 0
+  wGitTools:
+    path: 'npm:///wgittools'
+    enabled: 0
+  wNpmTools:
+    path: 'npm:///wnpmtools'
+    enabled: 0
+  tar:
+    path: 'npm:///tar#6.0.2'
+    enabled: 0
+  proper-lockfile:
+    path: 'npm:///proper-lockfile#4.1.1'
+    enabled: 0
+  needle:
+    path: 'npm:///needle#2.5.0'
+    enabled: 0
+  wFiles:
+    path: 'hd://.'
+    enabled: 0
+    criterion:
+      development: 1
+  eslint:
+    path: 'npm:///eslint#7.1.0'
+    enabled: 0
+    criterion:
+      debug: 1
+  wait-sync:
+    path: 'npm:///wait-sync#1.0.1'
+    enabled: 0
+    criterion:
+      development: 1
+  wTesting:
+    path: 'npm:///wTesting'
+    enabled: 0
+    criterion:
+      development: 1
+path:
+  in: .
+  out: out
+  temp:
     - 'path::out'
-    - 'package-lock.json'
-    - 'package.json'
-    - 'node_modules'
-  proto : './proto'
-  export : '{path::proto}/**'
-  doc : './doc'
-
-  out.raw.debug :
-    path : '{path::out}/debug'
-    criterion :
-      debug : debug
-      raw : raw
-      content : prime
-  out.compiled.debug :
-    path : '{path::out}/compiled.debug'
-    criterion :
-      debug : debug
-      raw : compiled
-      content : prime
-  out.raw.release :
-    path : '{path::out}/raw.release'
-    criterion :
-      debug : release
-      raw : raw
-      content : prime
-  out.compiled.release :
-    path : '{path::out}/release'
-    criterion :
-      debug : release
-      raw : compiled
-      content : prime
-
-  entry.proto.no.tests :
-    path : proto/wtools/amid/l4_files/entry/Files.s
-    criterion :
-      tests : 'no.tests'
-  entry.proto.only.tests :
-    path : proto/**/*.test.s
-    criterion :
-      tests : 'only.tests'
-
-  # npm.entry : proto/wtools/abase/Layer2.s
-  # npm.files : proto
-
-  entry.out.raw.debug :
-    path : '{path::out.*=1}/source/wtools/amid/l4_files/entry/Files.s'
-    criterion :
-      debug : [ debug, release ]
-      raw : raw
-      content : prime
-  entry.out.compiled.debug :
-    path : '{path::out.*=}/source/Index.s'
-    criterion :
-      debug : [ debug, release ]
-      raw : compiled
-      content : prime
-
-reflector :
-
-  reflect.proto :
-    inherit : predefined.*
-    criterion :
-      tests : 'no.tests'
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-      content : prime
-    filePath :
-      path::proto : '{path::out.*=1}/source'
-
-  transpile.proto.raw :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.no.tests
-    criterion :
-      raw : raw
-      debug : release
-      content : prime
-    filePath :
-      path::proto : '{path::out.raw.release}'
-
-  transpile.proto.no.tests.compiled :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.*=1
-    criterion :
-      tests : 'no.tests'
-      raw : compiled
-      debug : [ debug, release ]
-      content : prime
-    filePath :
-      '**.test*' : 0
-      '**.test/**' : 0
-      path::proto : '{path::out.*=1}/Main.s'
-
-  transpile.proto.only.tests.compiled :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.*=1
-      external.before : '{path::out.*=1}/Main.s'
-    criterion :
-      tests : 'only.tests'
-      raw : compiled
-      debug : [ debug, release ]
-      content : prime
-    filePath :
-      '**.test*' : 1
-      path::proto : '{path::out.*=1}/Tests.test.s'
-
-step :
-
-  npm.generate :
-    inherit : npm.generate
-    entryPath : path::entry.out.*=1
-    packagePath : '{path::out.*=1}/package.json'
-    filesPath : '{path::out.*=1}/source/**'
-    criterion :
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-
-  clean.out :
-    inherit : files.delete
-    filePath : '{path::out.*=1}/source'
-    criterion :
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-      tests : [ 'no.tests', 'only.tests' ]
-      content : [ 'prime', 'npm' ]
-
-  clean.out.npm :
-    inherit : files.delete
-    filePath : path::out.*=1
-    criterion :
-      debug : debug
-      raw : compiled
-      tests : no.tests
-      content : npm
-
-  tst.proto :
-    shell : 'tst {path::proto}'
-    criterion :
-      content : proto
-
-  tst.debug :
-    shell : 'tst {path::out.*=1}'
-    criterion :
-      content : prime
-      debug : debug
-
-  tst.release :
-    shell : 'tst {path::out.*=1}'
-    criterion :
-      content : prime
-      debug : release
-
-build :
-
-  debug :
-    criterion :
-      default : 1
-      debug : debug
-      raw : raw
-      content : prime
-    steps :
-      - step::clean.out*=2
+    - package-lock.json
+    - package.json
+    - node_modules
+  proto: ./proto
+  export: '{path::proto}/**'
+  doc: ./doc
+  out.raw.debug:
+    path: '{path::out}/debug'
+    criterion:
+      debug: debug
+      raw: raw
+      content: prime
+  out.compiled.debug:
+    path: '{path::out}/compiled.debug'
+    criterion:
+      debug: debug
+      raw: compiled
+      content: prime
+  out.raw.release:
+    path: '{path::out}/raw.release'
+    criterion:
+      debug: release
+      raw: raw
+      content: prime
+  out.compiled.release:
+    path: '{path::out}/release'
+    criterion:
+      debug: release
+      raw: compiled
+      content: prime
+  entry.proto.no.tests:
+    path: proto/wtools/amid/l4_files/entry/Files.s
+    criterion:
+      tests: no.tests
+  entry.proto.only.tests:
+    path: proto/**/*.test.s
+    criterion:
+      tests: only.tests
+  entry.out.raw.debug:
+    path: '{path::out.*=1}/source/wtools/amid/l4_files/entry/Files.s'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw: raw
+      content: prime
+  entry.out.compiled.debug:
+    path: '{path::out.*=}/source/Index.s'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw: compiled
+      content: prime
+  npm.proto.entry:
+    - /pro/module/wFiles/proto/wtools/amid/l4_files/entry/Files.s
+    - /pro/module/wFiles/proto/node_modules/wFiles
+reflector:
+  reflect.proto:
+    inherit: predefined.*
+    criterion:
+      tests: no.tests
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+      content: prime
+    filePath:
+      'path::proto': '{path::out.*=1}/source'
+  transpile.proto.raw:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.no.tests'
+    criterion:
+      raw: raw
+      debug: release
+      content: prime
+    filePath:
+      'path::proto': '{path::out.raw.release}'
+  transpile.proto.no.tests.compiled:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.*=1'
+    criterion:
+      tests: no.tests
+      raw: compiled
+      debug:
+        - debug
+        - release
+      content: prime
+    filePath:
+      '**.test*': 0
+      '**.test/**': 0
+      'path::proto': '{path::out.*=1}/Main.s'
+  transpile.proto.only.tests.compiled:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.*=1'
+      external.before: '{path::out.*=1}/Main.s'
+    criterion:
+      tests: only.tests
+      raw: compiled
+      debug:
+        - debug
+        - release
+      content: prime
+    filePath:
+      '**.test*': 1
+      'path::proto': '{path::out.*=1}/Tests.test.s'
+step:
+  npm.generate:
+    inherit: npm.generate
+    entryPath: 'path::entry.out.*=1'
+    packagePath: '{path::out.*=1}/package.json'
+    filesPath: '{path::out.*=1}/source/**'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+  clean.out:
+    inherit: files.delete
+    filePath: '{path::out.*=1}/source'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+      tests:
+        - no.tests
+        - only.tests
+      content:
+        - prime
+        - npm
+  clean.out.npm:
+    inherit: files.delete
+    filePath: 'path::out.*=1'
+    criterion:
+      debug: debug
+      raw: compiled
+      tests: no.tests
+      content: npm
+  tst.proto:
+    shell: 'tst {path::proto}'
+    criterion:
+      content: proto
+  tst.debug:
+    shell: 'tst {path::out.*=1}'
+    criterion:
+      content: prime
+      debug: debug
+  tst.release:
+    shell: 'tst {path::out.*=1}'
+    criterion:
+      content: prime
+      debug: release
+build:
+  debug:
+    criterion:
+      default: 1
+      debug: debug
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - reflect.proto.*=1
-
-  compiled.debug :
-    criterion :
-      debug : debug
-      raw : compiled
-      content : prime
-    steps :
-      - step::clean.out*=2
+  compiled.debug:
+    criterion:
+      debug: debug
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.no.tests*=1
       - transpile.proto.only.tests*=1
-
-  raw.release :
-    criterion :
-      debug : release
-      raw : raw
-      content : prime
-    steps :
-      - step::clean.out*=2
+  raw.release:
+    criterion:
+      debug: release
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.raw
-
-  release :
-    criterion :
-      debug : release
-      raw : compiled
-      content : prime
-    steps :
-      - step::clean.out*=2
+  release:
+    criterion:
+      debug: release
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.no.tests*=1
       - transpile.proto.only.tests*=1
-
-  npm :
-    criterion :
-      debug : debug
-      raw : raw
-      content : npm
-    steps :
+  npm:
+    criterion:
+      debug: debug
+      raw: raw
+      content: npm
+    steps:
       - npm.generate.*=1
-      # - npm.generate
-
-  all :
-    steps :
-      - build::debug
-      - build::compiled.debug
-      - build::raw.release
-      - build::release
-      - build::npm
+  all:
+    steps:
+      - 'build::debug'
+      - 'build::compiled.debug'
+      - 'build::raw.release'
+      - 'build::release'
+      - 'build::npm'
