--- a/package.json
+++ b/package.json
@@ -38,28 +38,28 @@
     "url": "https://github.com/Wandalen/wFiles/issues"
   },
   "dependencies": {
-    "tar": "=6.0.2",
-    "proper-lockfile": "=4.1.1",
     "needle": "=2.5.0",
-    "wTools": "delta",
-    "wstringer": "delta",
-    "wstringsextra": "delta",
+    "proper-lockfile": "=4.1.1",
+    "tar": "=6.0.2",
     "wConsequence": "delta",
     "wCopyable": "delta",
+    "wfieldsstack": "delta",
     "wgdf": "delta",
+    "wgittools": "delta",
     "wintrospectorbasic": "delta",
+    "wLogger": "delta",
+    "wnpmtools": "delta",
     "wpathbasic": "delta",
     "wpathtools": "delta",
-    "wuribasic": "delta",
-    "wweburibasic": "delta",
     "wprocess": "delta",
-    "wfieldsstack": "delta",
     "wRegexpObject": "delta",
     "wselector": "delta",
+    "wstringer": "delta",
+    "wstringsextra": "delta",
+    "wTools": "delta",
+    "wuribasic": "delta",
     "wverbal": "delta",
-    "wLogger": "delta",
-    "wgittools": "delta",
-    "wnpmtools": "delta"
+    "wweburibasic": "delta"
   },
   "devDependencies": {
     "eslint": "7.1.0",
