--- a/will.yml
+++ b/will.yml
@@ -22,14 +22,14 @@ about:
   enabled: 1
   license: MIT
   npm.name: wFiles
-  author: Kostiantyn Wandalen <wanalen@01.school>
+  author: Kostiantyn Wandalen <wandalen@obox.systems>
   keywords:
     - wTools
     - wFiles
     - file
     - standardized abstract interface
   contributors:
-    - Kostiantyn Wandalen <wanalen@01.school>
+    - Kostiantyn Wandalen <wandalen@obox.systems>
     - Volodymyr M. <volodymyr.migdal@gmail.com>
     - Ihor O. <iostashvxi@gmail.com>
     - Dmytro Kryvoruchko <dm.vict.kr@gmail.com>
